package work5;

/**
 * Інтерфейс, що представляє абстрактну дію користувача.
 * Описує єдиний метод {@link #execute()}, який викликається
 * ініціатором (Invoker) при натисканні кнопки або виборі пункту меню.
 * Реалізація інтерфейсу відповідає шаблону Command.
 */
public interface Action {

    /**
     * Виконує дію, пов'язану з певною командою.
     */
    void execute();
}